src/test/deca/syntax/invalid/created/overflow.deca
// test qu'un overflow émet un message d'erreur
{
	float b = 1.9999999999999999999999999999999;
}
